# slugify

./: .travis.yml  CHANGELOG.md  CNAME  README.md  doc-index.html  index.html  slugify.cabal  stack.yaml
.github/workflows/: build-ci.yml
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  (+1 more)
bitarray-0.0.1.1/: Data-BitArray-IO.html  Data-BitArray-ST.html  Data-BitArray.html  LICENSE  bitarray.haddock  bitarray.txt  doc-index.html  doc-index.json  index.html
slugify-0.1.0.1/: Text-Slugify.html  doc-index.html  doc-index.json  index.html  slugify.haddock  slugify.txt
slugify-0.1.0.2/: Text-Slugify.html  doc-index.html  index.html  slugify.haddock
src/Text/: Slugify.hs
unicode-transforms-0.3.6/: Data-ByteString-UTF8-Normalize.html  Data-Text-Normalize.html  Data-Unicode-Types.html  doc-index.html  doc-index.json  index.html  unicode-transforms.haddock  unicode-transforms.txt
(+21 files in other folders)
